themes/finna2/less/finna/feed.less
/* Carousel styling */
.carousel {
    button {
        overflow: hidden; // prevent scrollbars appearing with some browsers   
    }
    .slick-slider {
        padding: 0px;   
    }
    .slick-track {
          
    }
    .slick-slider .slick-slide {
        overflow: hidden;
    }
    .slick-initialized.slick-slider:not(.slick-vertical) {
        margin-bottom: 50px;
        .slick-slide {
            // adjust slick slider to align left grid
            border-left: none;
            border-right: 12px solid transparent;
            &.adjusted-height {
                .wrapper {
                    background: @carousel-slider-background;
                }
                .wrapper img {
                    margin-left: auto;
                    margin-right: auto;
                    width: auto;
                    max-width: none;
                }
            }
            .carousel-slide-header p:not(.title-bottom) {
                bottom: 0;
                margin-bottom: 0;
            }
        }
        .slick-prev, .slick-next {
            width: 20px;
        }
        .slick-prev {
            left: -28px;
            &:before {
                margin-left: -5px;
                color: @gray;
            }
        }
        .slick-next {
            right: -14px;
            &:before {
                margin-left: -4px;
                color: @gray;
            }
        }
        
    }
    .carousel-header {
        background: @carousel-header-background;
        display: inline-block;
        padding: @carousel-header-padding;
        color: @carousel-header-color;
    }
    .carousel-slide-header p {
        position: absolute;
        min-height: 30px;
        z-index: 1;
        padding: 5px 10px;
        color: @carousel-slide-header-color;
        background: @carousel-slide-header-background;
        font-size: 14px;
        font-weight: 900;
        margin: 0;
        margin-bottom: 0;
        letter-spacing: 0.2px;
        text-shadow: @carousel-slide-header-text-shadow;
        word-break: break-word;
        word-wrap: break-word;

        &.title-bottom {
            top: 100%;
        }
    }
    .carousel-hover-title {
        font-size: 14px;
        font-weight: 900;
        color: @carousel-slide-header-color;
    }
    .carousel-text {
        position: absolute;
        word-break: break-word;
        width: 265px;
        height: auto;
        max-height: 100%;
        color: @carousel-slide-text-color;
        background: @carousel-text-background-color;
        transition: opacity 0.5s ease;
        bottom: 0;
        padding: 0px 10px 10px;
        z-index: 1;
        opacity: 0;
        &.text-bottom {
            top: 0px;
            overflow: hidden;
            margin-top: 0;
            
            padding-bottom: 10px;
            max-height: 100%;
        }
        p {
            position: relative;
            margin: 0;
            top: 0;
            padding: 10px 0px;
            text-shadow: @finna-text-shadow;
            transition: opacity 0.4s ease;
            
            word-break: break-word;
            word-wrap: break-word;
        }   
        span.carousel-description {
            position: absolute;
            text-decoration: underline;
            bottom: 0px;
            width: 100%;
            font-weight: bold;
            margin-left: -10px;
            background: rgba(0, 0, 0, 0.9);
            border-top: 1px solid @carousel-slide-text-color;
            padding: 5px 10px;
            box-shadow: 0px -11px 20px -9px black;
            color: @carousel-slide-link-color;
            i {
                margin-right: 4px;
            }
            @media (max-width: @screen-sm) {
                padding: 15px 10px;
            }
        }
    }

    .slick-slider.slick-vertical {
        .slick-slide img {
            max-height: initial;   
        }
        .carousel-slide-header p {
            background: @carousel-verticalslide-header-background;
        }
        .carousel-text p {
            margin-left: 5px;
        }
        .carousel-hover-title {
            display: none;  
        }
    }
    .slick-slider:not(.slick-vertical) .slick-slide.slick-active {
        &:hover,
        &.ie-mobile-tap {
            .carousel-text {
                opacity: 1;
            }
        }
    }
    .slick-slider:not(.slick-vertical) .slick-slide.slick-active:hover .carousel-slide-header p:not(.title-bottom) {
        opacity: 0;
    }
    .slick-slider:not(.slick-vertical) .slick-slide.slick-active .carousel-slide-header p:not(.title-bottom) {
        opacity: 1;
        transition: opacity 0.1s ease;
    }

    .slick-slider.slick-vertical {
        padding: 0px;
        margin-bottom: 110px;
        .wrapper {
            overflow: hidden;   
        }
        .carousel-slide-header {
            p {
                max-width: 50%;
                text-align: right;
                right: 0;
            }
        }
        .carousel-text {
            opacity: 1;
            padding: 0px;   
            margin-top: 50px;
            background: @carousel-verticalslide-header-background;
            overflow: hidden;
            padding-right: 2px;
            max-width: 55%;
            height: 75px;
            bottom: auto;
            right: 10px;
            text-align: right;
            p {
                padding: 0px;
                border-top: none;
                
            }
        }
        .slick-prev, .slick-next {
            background: rgba(35,35,35,0.1);
            .rotate (90deg);
            z-index: 1;
            top: 107%;
        }
        .slick-prev {
            left: 50%;
            margin-left: -50px;
        }
        .slick-next {
            right: 50%;
            margin-right: -50px;
        }
        .slick-dots {
            display: none !important;
        }
    }
    
    .slick-dots {
        margin-top: -15px;
        left: 0;
        position: relative;
        button:before{
            font-size: 10px;
        }
    }

    .slick-prev, .slick-next {
        background: rgba(35,35,35,0.1);
        overflow-x: hidden;
        z-index: 1;
        width: 35px;
        height: 45px;
        &:before {
            display: block;
            color: @gray;  
        }
        &:hover:before, &:focus:before  {
            margin-right: 0; 
        }
    }
    .slick-prev {
        left: -22px;  
    }
    .slick-next {
        right: -22px;  
    }
}

.carousel-non-touch-device .carousel-hover-title::after {
    content: " »";
}

/** List feed **/
.feed-container .list-feed:not(.with-image) {
    li {
        span.date {
            float: left;
            + a {
                display: block;
                margin-left: 3.5em;
            }
        }
    }
}
.feed-container .list-feed {
    background: @list-feed-background;
    padding: @list-feed-padding;
    margin-bottom: 20px;
    li {
        line-height: 2em;
        a {
            text-decoration: none;
        }
    }
    .title {
        font-weight: normal;
        letter-spacing: 0.3px;
    }
    .feed-header {
        display: inline-block;
        color: @list-feed-header-color;
        padding: @list-feed-header-padding;
        background: @list-feed-header-background;
    }
    .more-link {
        margin-top: 15px;
    }
    .date {
        color: @gray-light;   
    }

    .text {
        color: @gray;
        &:hover {
            text-decoration: none;   
        }
    }

    &.with-image {
        li {
          clear: both;  
        }
        img {
            max-width: 40%;
            margin-bottom: 15px;
            margin-right: 10px;
            float: left;
        }
        .date {
            position: absolute;
            padding: 5px;
            color: @body-bg;
            background: rgba(20,20,20,.6);
            left: 25px;
        }
        .title, .text {
            vertical-align: top;
            float: right;
            width: 55%;
        }  
        .text {
            padding-bottom: 15px;
        }
        .more-link {
            display: block;
            text-align: center;
            padding-top: 15px;
        }
        
    }
    
}

// mixin for image prosessing on fulltext rss feeds
.rss-content-image {
    height: auto;
    max-width: 100%;
    margin-top: 15px;
    margin-bottom: 15px;
}

// rss-feeds on content page
.main.template-dir-feedcontent.template-name-content {
    .feed-content {
        img {
            .rss-content-image();
        }
        .date {
            font-weight: bold;
            background: #DFDFDF;
            text-transform: uppercase;
            padding: 5px;
            margin-bottom: 10px;
            display: none;
            font-size: .9em;
        }
    }
    .article-navigation-header {
        display: none;
        margin-top: 0;
        padding-top: 0;
        @media (max-width: @screen-xs-max) {
            margin-top: 10px;
            padding-top: 10px;
            background-color: @body-bg;
            border-top: 1px solid @gray-mid-light;
        }
        .menu-label {
            display: none;
        }
    }
    ul.article-links li {
        display: block;
        margin-bottom: 10px;
        font-size: 1.05em;
        word-wrap: break-word;
    }
}

// rss-feed in modal window
#modal.feed-content {
    .modal-dialog {
        img {
            .rss-content-image();
            max-width: 100% !important;
            height: auto !important;
        }
        .date {
            color: @gray-light;
            margin-bottom: 15px;
            display: none;
        }
    }
}


// rss-feed on organisation page
.organisation-info-page .feed-container.info-element {
    .list-feed {
        padding: 0;
        margin-bottom: 0;
    }
}

